-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 041103) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

????2003 (v2.3.1)  -** stable release **-
	- added: --disable-effects configure option; build ecasound 
		 without effect and controller components
	- changed: libtool is setup to only create object files for
		   static linkage; you can revert to the old behaviour
		   with the --enable-shared configure option
	- changed: ecasound.el updated to 0.8.3, lots of small
		   changes, see ecasound.el for details [mlang]
        - fixed: makefile errors when building against system librealine
        - fixed: processing did not start in the default transport mode
	  	 with JACK versions 0.80 and older
	- fixed: recording failed with a WinTv 401dbx and the btaudio 
		 OSS driver
29082003 (v2.3.0)  -** stable release **-
	- edi-entries: edi-4, edi-19 and edi-35 frozen, edi-38 added 
		       and frozen immediately, edi-39 added; frozen is 
		       a new status for items that probably won't be
		       ever implemented
	- note: verified to compile ok with gcc-3.3
	- note: verified to work with python-2.3
	- added: eaim - command 'engine-launch' to inialize engine
		 without starting actual processing, and 'engine-halt'
		 for halting it without disconnecting; useful with
		 JACK transport functions
	- added: separate AUTHORS file; also added to the website
	- added: -d, -dd and -d command-line options, see ecasound(1)