@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 041103) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 111103) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z][-extraT]" :
@@ -21,11 +21,12 @@ About the version numbers... "vX.Y[.Z][-extraT]" :
 		   with the --enable-shared configure option
 	- changed: ecasound.el updated to 0.8.3, lots of small
 		   changes, see ecasound.el for details [mlang]
-        - fixed: makefile errors when building against system librealine
+        - fixed: makefile errors when building against system libreadline
         - fixed: processing did not start in the default transport mode
 	  	 with JACK versions 0.80 and older
 	- fixed: recording failed with a WinTv 401dbx and the btaudio 
 		 OSS driver
+	- fixed: compilation against alsa-lib-1.0.x
 29082003 (v2.3.0)  -** stable release **-
 	- edi-entries: edi-4, edi-19 and edi-35 frozen, edi-38 added 
 		       and frozen immediately, edi-39 added; frozen is 
